Add gh-pages deploy to package.json

--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-config-google": "^0.9.1"
-  }
+    "eslint-config-google": "^0.9.1",
+    "gh-pages": "^1.1.0"
+  },
+  "homepage": "https://dlqs.github.io/pomodoro"
 }
